--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "jsonresume-theme-classy",
-  "version": "1.0.1",
+  "name": "jsonresume-theme-classy-fork",
+  "version": "1.0.0",
   "description": "An uber-classy JSONResume theme.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Jared Cubilla",
+  "author": "Alexander O'Mara",
+  "contributors": ["Jared Cubilla"],
   "license": "MIT",
   "dependencies": {
     "gravatar": "^1.0.6",
@@ -17,13 +18,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JaredCubilla/jsonresume-theme-classy.git"
+    "url": "https://github.com/AlexanderOMara/jsonresume-theme-dark-classy-fork.git"
   },
   "keywords": [
     "json", "jsonresume", "theme"
   ],
   "bugs": {
-    "url": "https://github.com/JaredCubilla/jsonresume-theme-classy/issues"
+    "url": "https://github.com/AlexanderOMara/jsonresume-theme-dark-classy-fork/issues"
   },
-  "homepage": "https://github.com/JaredCubilla/jsonresume-theme-classy"
+  "homepage": "https://github.com/AlexanderOMara/jsonresume-theme-dark-classy-fork"
 }
