--- a/resume.template
+++ b/resume.template
@@ -95,6 +95,8 @@ li {
 	color:#fff;
 	padding: 6px;
 	font-size: 1.2em;
+	display: inline-block;
+	margin: 0.1em 0;
 }
 blockquote {
 	margin: 2em 10px;
