--- a/resume.template
+++ b/resume.template
@@ -12,7 +12,7 @@
 /*<!--*/
 body {
 	font-size: 62.5%;
-	font-family: Montserrat;
+	font-family: Montserrat, sans-serif;
 	background-color: #000000;
 	color: white;
 }
