--- a/resume.template
+++ b/resume.template
@@ -14,10 +14,10 @@ body {
 	font-size: 62.5%;
 	font-family: Montserrat, sans-serif;
 	background-color: #000000;
-	color: white;
+	color: #eeeeee;
 }
 a {
-	color: white;
+	color: #eeeeee;
 	text-decoration: none;
 }
 a:visited {
@@ -35,7 +35,7 @@ a:hover {
 	margin-rightt:5%;
 }
 h1 {
-	color: white;
+	color: #eeeeee;
 	font-size:2em;
 	margin-bottom:0;
 }
@@ -68,7 +68,7 @@ h2 {
 	font-size: 3.5em;
 }
 h3 {
-	color: lightgrey;
+	color: #aaaaaa;
 	font-size:28px;
 	margin-bottom:0;
 }
