--- a/resume.template
+++ b/resume.template
@@ -21,10 +21,10 @@ a {
 	text-decoration: none;
 }
 a:visited {
-	color: #4e4e4e;
+	color: #eeeeee;
 }
 a:hover {
-	color: #4e4e4e;
+	color: #888888;
 	text-decoration: underline;
 }
 
@@ -73,7 +73,7 @@ h3 {
 	margin-bottom: 0;
 }
 h4 {
-	color: #4e4e4e;
+	color: #555555;
 	font-size: 1.5em;
 	margin-top: 0;
 }
@@ -81,12 +81,12 @@ h4 {
 	margin-bottom: 10px;
 }
 p {
-	color: gray;
+	color: #aaaaaa;
 	font-family: 'Open Sans';
 	font-size: 1.5em;
 }
 li {
-	color: gray;
+	color: #aaaaaa;
 	font-family: 'Open Sans';
 	font-size: 1.5em;
 }
@@ -205,7 +205,6 @@ blockquote .name {
 						{{/keywords}}
 					{{/skills}}
 				</div>
-				<br />
 				{{/skillsBool}}
 				{{#educationBool}}
 				<div id="education">
