--- a/resume.template
+++ b/resume.template
@@ -12,7 +12,7 @@
 /*<!--*/
 body {
 	font-size: 62.5%;
-	font-family: Montserrat, sans-serif;
+	font-family: "Montserrat", sans-serif;
 	background-color: #171717;
 	color: #eeeeee;
 }
@@ -56,7 +56,7 @@ h4 {
 	margin-top: 0;
 }
 .profile {
-	font-family: Montserrat;
+	font-family: "Montserrat";
 	font-size: 1em;
 	margin: 0;
 }
@@ -85,12 +85,12 @@ h4 {
 }
 p {
 	color: #aaaaaa;
-	font-family: 'Open Sans';
+	font-family: "Open Sans";
 	font-size: 1.5em;
 }
 li {
 	color: #aaaaaa;
-	font-family: 'Open Sans';
+	font-family: "Open Sans";
 	font-size: 1.5em;
 }
 .keywords {
@@ -105,7 +105,7 @@ blockquote {
 	margin: 2em 10px;
 	padding: 1em 10px;
 	border-left: 10px solid #edf0f5;
-	font-family: 'Open Sans';
+	font-family: "Open Sans";
 	font-size: 1.5em;
 }
 blockquote .name {
