--- a/resume.template
+++ b/resume.template
@@ -16,7 +16,7 @@ body {
 	background-color: #171717;
 	color: #eeeeee;
 }
-.wrap {
+.main-wrap {
 	max-width: 960px;
 	margin: 0 auto;
 }
@@ -146,7 +146,7 @@ blockquote .name {
 		<![endif]-->
 	</head>
 	<body>
-		<div class="wrap">
+		<div class="main-wrap">
 			<div class="header">
 				<h1>{{basics.name}}</h1>
 				<h3 class="label">{{basics.label}}</h3>
