--- a/resume.template
+++ b/resume.template
@@ -244,8 +244,9 @@ blockquote .name {
 				<div id="education">
 					<h2><i class="fa fa-graduation-cap left"></i> Education</h2>
 					{{#education}}
-					<h3>{{institution}} - {{studyType}}, {{area}}</h3>
+					<h3>{{studyType}} - {{institution}}</h3>
 					<h4>{{startDateMonth}}{{startDateYear}} - {{endDateMonth}}{{endDateYear}}</h4>
+					<p>{{area}}</p>
 					{{#educationCourses}}
 					<h4>Courses</h4>
 					<ul>
