--- a/resume.template
+++ b/resume.template
@@ -147,7 +147,7 @@ li {
 blockquote {
 	margin: 2em 10px;
 	padding: 1em 10px;
-	border-left: 10px solid #edf0f5;
+	border-left: 10px solid #666666;
 	font-family: "Open Sans";
 	font-size: 1.5em;
 }
@@ -209,13 +209,13 @@ blockquote .name {
 			</header>
 			<main role="main" class="main">
 				{{#aboutBool}}
-				<section id="about">
+				<section id="about" class="section">
 					<h2><i class="fa fa-user left"></i> About</h2>
 					<p>{{basics.summary}}</p>
 				</section>
 				{{/aboutBool}}
 				{{#workBool}}
-				<section id="work">
+				<section id="work" class="section">
 					<h2><i class="fa fa-suitcase left"></i> Work Experience</h2>
 					{{#work}}
 					<div class="job">
@@ -235,7 +235,7 @@ blockquote .name {
 				</section>
 				{{/workBool}}
 				{{#skillsBool}}
-				<section id="skills">
+				<section id="skills" class="section">
 					<h2><i class="fa fa-tasks left"></i> Skills</h2>
 					{{#skills}}
 					<h3 class="skills">{{name}}</h3>
@@ -248,7 +248,7 @@ blockquote .name {
 				</section>
 				{{/skillsBool}}
 				{{#educationBool}}
-				<section id="education">
+				<section id="education" class="section">
 					<h2><i class="fa fa-graduation-cap left"></i> Education</h2>
 					{{#education}}
 					<h3>{{studyType}} - {{institution}}</h3>
@@ -266,7 +266,7 @@ blockquote .name {
 				</section>
 				{{/educationBool}}
 				{{#awardsBool}}
-				<section id="awards">
+				<section id="awards" class="section">
 					<h2><i class="fa fa-trophy left"></i> Awards</h2>
 					{{#awards}}
 					<h3>{{title}} - {{awarder}}</h3>
@@ -276,7 +276,7 @@ blockquote .name {
 				</section>
 				{{/awardsBool}}
 				{{#publicationsBool}}
-				<section id="publications">
+				<section id="publications" class="section">
 					<h2><i class="fa fa-book left"></i> Publications</h2>
 					{{#publications}}
 					<h3>{{name}}</h3>
@@ -287,7 +287,7 @@ blockquote .name {
 				</section>
 				{{/publicationsBool}}
 				{{#interestsBool}}
-				<section id="interests">
+				<section id="interests" class="section">
 					<h2><i class="fa fa-star left"></i> Interests</h2>
 					{{#interests}}
 					<h3 class="skills">{{name}}</h3>
@@ -300,7 +300,7 @@ blockquote .name {
 				</section>
 				{{/interestsBool}}
 				{{#languagesBool}}
-				<section id="languages">
+				<section id="languages" class="section">
 					<h2><i class="fa fa-language left"></i> Languages</h2>
 					{{#languages}}
 					<h3>{{language}}</h3>
@@ -309,14 +309,13 @@ blockquote .name {
 				</section>
 				{{/languagesBool}}
 				{{#referencesBool}}
-				<section id="references">
+				<section id="references" class="section">
 					<h2><i class="fa fa-thumbs-up left"></i> References</h2>
 					{{#references}}
 					<blockquote>
 						{{reference}}
 						<div class="name"><br />- {{name}}</div>
 					</blockquote>
-					<br />
 					{{/references}}
 				</section>
 				{{/referencesBool}}
