--- a/resume.template
+++ b/resume.template
@@ -48,22 +48,23 @@ a:focus {
 h1 {
 	color: #eeeeee;
 	font-size: 2em;
-	margin-bottom: 0;
+	margin: 1em 0 0;
 	text-transform: uppercase;
 }
 h2 {
 	font-size: 3.5em;
+	margin: 0.83em 0;
 	text-transform: uppercase;
 }
 h3 {
 	color: #aaaaaa;
 	font-size: 28px;
-	margin-bottom: 0;
+	margin: 1em 0 0;
 }
 h4 {
 	color: #666666;
 	font-size: 1.5em;
-	margin-top: 0;
+	margin: 0 0 1em;
 }
 .profile {
 	font-family: "Montserrat";
