--- a/resume.template
+++ b/resume.template
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans" />
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
-		<style>
+		<style type="text/css">
 /*<!--*/
 body {
 	font-size: 62.5%;
@@ -211,6 +211,10 @@ blockquote .name {
 	}
 	a {
 		color: #555555;
+		/*Avoid printing the color at the start of the transition (Chrome issue.)*/
+		-webkit-transition: none;
+		   -moz-transition: none;
+		        transition: none;
 	}
 	a:visited {
 		color: #555555;
@@ -238,7 +242,7 @@ blockquote .name {
 	li {
 		color: #555555;
 	}
-	.list-set.keywords li {/*TODO: */
+	.list-set.keywords li {
 		background-color: transparent;
 		color: #555555;
 		border: 1px solid #aaaaaa;
