--- a/resume.template
+++ b/resume.template
@@ -211,10 +211,6 @@ blockquote .name {
 	}
 	a {
 		color: #555555;
-		/*Avoid printing the color at the start of the transition (Chrome issue.)*/
-		-webkit-transition: none;
-		   -moz-transition: none;
-		        transition: none;
 	}
 	a:visited {
 		color: #555555;
@@ -248,11 +244,14 @@ blockquote .name {
 		border: 1px solid #aaaaaa;
 	}
 	blockquote {
-		margin: 2em 10px;
-		padding: 1em 10px;
 		border-left: 10px solid #999999;
-		font-family: "Open Sans";
-		font-size: 1.5em;
+	}
+	* {
+		/*Avoid printing the color at the start of the transition (Chrome issue).*/
+		-webkit-transition: none !important;
+		   -moz-transition: none !important;
+		        transition: none !important;
+		
 	}
 }
 /*-->*/
