--- a/resume.template
+++ b/resume.template
@@ -35,7 +35,6 @@ a:focus {
 	color: #777777;
 	text-decoration: none;
 }
-
 .header {
 	text-align: center;
 	font-size: 2em;
@@ -61,7 +60,7 @@ h2 {
 }
 h3 {
 	color: #aaaaaa;
-	font-size: 28px;
+	font-size: 1.4em;
 	margin: 1em 0 0;
 }
 h4 {
@@ -77,7 +76,6 @@ h4 {
 .profile-name {
 	display: none;
 }
-
 .contact-header {
 	font-weight: bold;
 }
@@ -96,10 +94,7 @@ h4 {
 	font-size: 1em;
 }
 .main {
-	margin: 0 auto;
-	margin-left: 10%;
-	margin-right: 10%;
-	margin-bottom: 50px;
+	margin: 0 10%;
 }
 .skills {
 	margin-bottom: 10px;
@@ -202,6 +197,12 @@ blockquote .name {
 	body {
 		background: #FFFFFF;
 		color: #171717;
+	}
+	.main-wrap {
+		width: 100%;
+	}
+	.main {
+		margin: 0;
 	}
 	.section {
 		page-break-inside: avoid;
