--- a/resume.template
+++ b/resume.template
@@ -287,7 +287,7 @@ blockquote .name {
 				<section id="work" class="section">
 					<h2><i class="fa fa-suitcase left"></i>Work Experience</h2>
 					{{#work}}
-					<div class="job">
+					<section class="section-sub section-sub-job">
 						<h3>{{position}}, {{company}}</h3>
 						<h4>{{startDateMonth}}{{startDateYear}} - {{endDateMonth}}{{endDateYear}}</h4>
 						<p>{{summary}}</p>
@@ -299,7 +299,7 @@ blockquote .name {
 						{{/highlights}}
 						</ul>
 						{{/workHighlights}}
-					</div>
+					</section>
 					{{/work}}
 				</section>
 				{{/workBool}}
@@ -307,17 +307,19 @@ blockquote .name {
 				<section id="education" class="section">
 					<h2><i class="fa fa-graduation-cap left"></i>Education</h2>
 					{{#education}}
-					<h3>{{studyType}} - {{institution}}</h3>
-					<h4>{{startDateMonth}}{{startDateYear}} - {{endDateMonth}}{{endDateYear}}</h4>
-					<p>{{area}}</p>
-					{{#educationCourses}}
-					<h4>Courses</h4>
-					<ul>
-					{{#courses}}
-						<li>{{.}}</li>
-					{{/courses}}
-					</ul>
-					{{/educationCourses}}
+					<section class="section-sub section-sub-education">
+						<h3>{{studyType}} - {{institution}}</h3>
+						<h4>{{startDateMonth}}{{startDateYear}} - {{endDateMonth}}{{endDateYear}}</h4>
+						<p>{{area}}</p>
+						{{#educationCourses}}
+						<h4>Courses</h4>
+						<ul>
+						{{#courses}}
+							<li>{{.}}</li>
+						{{/courses}}
+						</ul>
+						{{/educationCourses}}
+					</section>
 					{{/education}}
 				</section>
 				{{/educationBool}}
@@ -325,12 +327,14 @@ blockquote .name {
 				<section id="skills" class="section">
 					<h2><i class="fa fa-tasks left"></i>Skills</h2>
 					{{#skills}}
-					<h3 class="skills">{{name}}</h3>
-					<ul class="list-set keywords">
-					{{#keywords}}
-						<li>{{.}}</li>
-					{{/keywords}}
-					</ul>
+					<section class="section-sub section-sub-skill">
+						<h3 class="skills">{{name}}</h3>
+						<ul class="list-set keywords">
+						{{#keywords}}
+							<li>{{.}}</li>
+						{{/keywords}}
+						</ul>
+					</section>
 					{{/skills}}
 				</section>
 				{{/skillsBool}}
@@ -338,9 +342,11 @@ blockquote .name {
 				<section id="awards" class="section">
 					<h2><i class="fa fa-trophy left"></i>Awards</h2>
 					{{#awards}}
-					<h3>{{title}} - {{awarder}}</h3>
-					<h4>{{day}} {{month}} {{year}}</h4>
-					<p>{{summary}}</p>
+					<section class="section-sub section-sub-award">
+						<h3>{{title}} - {{awarder}}</h3>
+						<h4>{{day}} {{month}} {{year}}</h4>
+						<p>{{summary}}</p>
+					</section>
 					{{/awards}}
 				</section>
 				{{/awardsBool}}
@@ -348,10 +354,12 @@ blockquote .name {
 				<section id="publications" class="section">
 					<h2><i class="fa fa-book left"></i>Publications</h2>
 					{{#publications}}
-					<h3>{{name}}</h3>
-					<h4>{{day}} {{month}} {{year}}</h4>
-					<p>{{summary}}</p>
-					<h4>Website: <a href="{{website}}">{{website}}</a></h4>
+					<section class="section-sub section-sub-publication">
+						<h3>{{name}}</h3>
+						<h4>{{day}} {{month}} {{year}}</h4>
+						<p>{{summary}}</p>
+						<h4>Website: <a href="{{website}}">{{website}}</a></h4>
+					</section>
 					{{/publications}}
 				</section>
 				{{/publicationsBool}}
@@ -359,12 +367,14 @@ blockquote .name {
 				<section id="interests" class="section">
 					<h2><i class="fa fa-star left"></i>Interests</h2>
 					{{#interests}}
-					<h3 class="skills">{{name}}</h3>
-					<ul class="list-set keywords">
-					{{#keywords}}
-						<li>{{.}}</li>
-					{{/keywords}}
-					</ul>
+					<section class="section-sub section-sub-interest">
+						<h3 class="skills">{{name}}</h3>
+						<ul class="list-set keywords">
+						{{#keywords}}
+							<li>{{.}}</li>
+						{{/keywords}}
+						</ul>
+					</section>
 					{{/interests}}
 				</section>
 				{{/interestsBool}}
@@ -372,8 +382,10 @@ blockquote .name {
 				<section id="languages" class="section">
 					<h2><i class="fa fa-quote-left left"></i>Languages</h2>
 					{{#languages}}
-					<h3>{{language}}</h3>
-					<h4>Fluency: {{fluency}}</h4>
+					<section class="section-sub section-sub-language">
+						<h3>{{language}}</h3>
+						<h4>Fluency: {{fluency}}</h4>
+					</section>
 					{{/languages}}
 				</section>
 				{{/languagesBool}}
